--- a/src/output.css
+++ b/src/output.css
@@ -6,6 +6,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --spacing: 0.25rem;
+    --radius-2xl: 1rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -158,4 +160,60 @@
     display: none !important;
   }
 }
-@layer utilities;
+@layer utilities {
+  .block {
+    display: block;
+  }
+  .flex {
+    display: flex;
+  }
+  .hidden {
+    display: none;
+  }
+  .h-\[56px\] {
+    height: 56px;
+  }
+  .w-\[99\%\] {
+    width: 99%;
+  }
+  .w-\[215px\] {
+    width: 215px;
+  }
+  .max-w-400 {
+    max-width: calc(var(--spacing) * 400);
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-around {
+    justify-content: space-around;
+  }
+  .justify-center {
+    justify-content: center;
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
+  }
+  .bg-\[\#061B3A\] {
+    background-color: #061B3A;
+  }
+  .pt-\[20px\] {
+    padding-top: 20px;
+  }
+  .text-\[white\] {
+    color: white;
+  }
+  .lg\:flex {
+    @media (width >= 64rem) {
+      display: flex;
+    }
+  }
+  .lg\:hidden {
+    @media (width >= 64rem) {
+      display: none;
+    }
+  }
+}
